2006-09-28  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Declare fn:remove function.

	* XQuery.java (initXQuery): Fix fn:not function to use new
	BooleanValue.not method.

2006-09-26  Per Bothner  <per@bothner.com>

	* XQParser.java (enclosedExpressionsSeen): New field.
	(parseContent): Increment enclosedExpressionsSeen.
	(parseElementConstructor): Use enclosedExpressionsSeen to detect
	non-literal namespace declaration.

	* XQResolveNames.java (walkApplyExp): Check for duplicate attributes
	in MakeElement call.  Remove excess increment of loop counter.

	* XQuery.java (initXQuery): Declare fn:codepoint-equal and fn:dateTime.

2006-09-19  Per Bothner  <per@bothner.com>

	* XQParser.java: Add support for Extenssion Expressions and pragmas.
	(PRAGMA_START_TOKEN): New token constant.
	(getRawToken): Recognize PRAGMA_START_TOKEN.
	(parseMaybePrimaryExpr): Handle PRAGMA_START_TOKEN and parse
	an Extension Expression.

2006-09-17  Per Bothner  <per@bothner.com>

	* XQParser.java (baseURIDeclarationSeen): New field.
	(parse): Complain if duplicate base-uri declaration.
	(parseEntityOrCharRef): Check that char ref is valid XML character.
	(parseXMLConstructor): Check for invalid comment contents.
	(parse): Fix error code for duplicate copy-namespaces declaration.
	(parse): Invalid version number should be error, not warning.
	(parse): Check that encoding has valid form.

2006-08-27  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (DEEP_EQUAL_BUILTIN): New constant.
	(<init>): Define fn:deep-equal.
	(walkApplyExp): Map deep-equal to SequenceUtils.deepEqual.

2006-08-23  Per Bothner  <per@bothner.com>

	* XQuery.java (makeClassName): New static method.
	* XQParser.java (parse): Change handling of module declaration.
	Generated class name now depends on URI *and& makeClassName.
	Fix handling of module import to handle multiple modules, and handle
	'at' location "hint".

2006-08-23  Per Bothner  <per@bothner.com>
